# MM-VMC

./: .gitignore  .gitmodules  CMakeLists.txt  DiffusionMonteCarlo.c  McMillan_minimum.csv  VariationalMonteCarlo.c  VariationalMonteCarlo.cu  main.c  physics.c  physics.cuh  physics.h
data/: Analysis.ipynb  McMillan65_data.csv  McMillan_minimum.csv  ave_energy200.csv  ave_energy_p200_1.csv  coarse_grid_ave_energy200.csv  fine_grid_ave_energy200.csv  finer_grid_ave_energy200.csv  smaller_error.csv
data/old/: ave_energy200_16x65536_64.csv  ave_energy_p200_0p01_0p1.csv
gglib/: gg_math.c  gg_math.h  gg_mem.c  gg_mem.h
ggpulib/: gg_cuda_macro.cuh  gg_math.cu  gg_math.cuh  gg_mem.cu  gg_mem.cuh
tests/: CMakeLists.txt  test_gg_math.cpp  test_ggpu_math.cu
